Доработал коллизию по сеттерам, добавил автотестов